# upylol

./: .dockerignore  .editorconfig  .env.example  .gitignore  Makefile  README.md  cleanup.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/analysis/: __init__.py  benchmarks.py  champions.py  diagnostics.py  match_analyzer.py  performance.py  stats_extractor.py  trends.py
backend/app/api/: router.py
backend/app/api/v1/: analysis.py  champions.py  health.py  match_detail.py  matches.py  player.py  static.py
backend/app/core/: __init__.py  database.py  dependencies.py  exceptions.py  redis.py
backend/app/models/: player.py
backend/app/riot/: __init__.py  client.py  constants.py  ddragon.py  rate_limiter.py  schemas.py  seasons.py
backend/app/riot/endpoints/: __init__.py
backend/app/schemas/: __init__.py  responses.py
backend/app/services/: __init__.py  analysis_service.py  cache_service.py  match_service.py  player_service.py
backend/tests/: conftest.py
backend/tests/test_analysis/: test_diagnostics.py  test_performance.py  test_stats_extractor.py
backend/tests/test_riot/: test_rate_limiter.py
frontend/: .env.example  .env.local.example  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.dev  README.md  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts
frontend/src/: env.d.ts  middleware.ts
infra/.github/: dependabot.yml
infra/nginx/: nginx.conf  nginx.dev.conf
infra/scripts/: backup-db.sh  init-db.sql  (+3 more)
(+95 files in other folders)
